# superbadblock

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: apfs.h  apfsscanner.h  diskscanner.h  filesystem.h  scanner.h  utils.h
src/filehunter/: main.cpp
src/libsbb/: apfsscanner.cpp  diskscanner.cpp  filesystem.cpp  utils.cpp
src/sbbfuse/: main.cpp
